<resources>
    <string name="app_name">Movies</string>
    <string name="splash_screen_msg">Movies!</string>

    <string name="genre_displayed_name_crime">Crime</string>
    <string name="genre_displayed_name_drama">Drama</string>
    <string name="genre_displayed_name_action">Action</string>
    <string name="genre_displayed_name_biography">Biography</string>
    <string name="genre_displayed_name_history">History</string>
    <string name="genre_displayed_name_adventure">Adventure</string>
    <string name="genre_displayed_name_fantasy">Fantasy</string>
    <string name="genre_displayed_name_western">Western</string>
    <string name="genre_displayed_name_comedy">Comedy</string>
    <string name="genre_displayed_name_sci_fi">Sci-Fi</string>
    <string name="genre_displayed_name_mystery">Mystery</string>
    <string name="genre_displayed_name_thriller">Thriller</string>
    <string name="genre_displayed_name_family">Family</string>
    <string name="genre_displayed_name_war">War</string>
    <string name="genre_displayed_name_animation">Animation</string>
    <string name="genre_displayed_name_romance">Romance</string>
    <string name="genre_displayed_name_horror">Horror</string>
    <string name="genre_displayed_name_music">Music</string>
    <string name="genre_displayed_name_film_noir">Film-Noir</string>
    <string name="genre_displayed_name_musical">Musical</string>
    <string name="genre_displayed_name_sport">Sport</string>

    <string name="genre_api_name_crime">Crime</string>
    <string name="genre_api_name_drama">Drama</string>
    <string name="genre_api_name_action">Action</string>
    <string name="genre_api_name_biography">Biography</string>
    <string name="genre_api_name_history">History</string>
    <string name="genre_api_name_adventure">Adventure</string>
    <string name="genre_api_name_fantasy">Fantasy</string>
    <string name="genre_api_name_western">Western</string>
    <string name="genre_api_name_comedy">Comedy</string>
    <string name="genre_api_name_sci_fi">Sci-Fi</string>
    <string name="genre_api_name_mystery">Mystery</string>
    <string name="genre_api_name_thriller">Thriller</string>
    <string name="genre_api_name_family">Family</string>
    <string name="genre_api_name_war">War</string>
    <string name="genre_api_name_animation">Animation</string>
    <string name="genre_api_name_romance">Romance</string>
    <string name="genre_api_name_horror">Horror</string>
    <string name="genre_api_name_music">Music</string>
    <string name="genre_api_name_film_noir">Film-Noir</string>
    <string name="genre_api_name_musical">Musical</string>
    <string name="genre_api_name_sport">Sport</string>

    <integer name="genre_api_id_crime">1</integer>
    <integer name="genre_api_id_drama">2</integer>
    <integer name="genre_api_id_action">3</integer>
    <integer name="genre_api_id_biography">4</integer>
    <integer name="genre_api_id_history">5</integer>
    <integer name="genre_api_id_adventure">6</integer>
    <integer name="genre_api_id_fantasy">7</integer>
    <integer name="genre_api_id_western">8</integer>
    <integer name="genre_api_id_comedy">9</integer>
    <integer name="genre_api_id_sci_fi">10</integer>
    <integer name="genre_api_id_mystery">11</integer>
    <integer name="genre_api_id_thriller">12</integer>
    <integer name="genre_api_id_family">13</integer>
    <integer name="genre_api_id_war">14</integer>
    <integer name="genre_api_id_animation">15</integer>
    <integer name="genre_api_id_romance">16</integer>
    <integer name="genre_api_id_horror">17</integer>
    <integer name="genre_api_id_music">18</integer>
    <integer name="genre_api_id_film_noir">19</integer>
    <integer name="genre_api_id_musical">20</integer>
    <integer name="genre_api_id_sport">21</integer>

    <string name="a_genre_item">a genre item</string>
    <string name="movie_thumbnail">movie thumbnail image</string>
    <string name="imdb_icon">imdb icon</string>
    <string name="director">Director:</string>
    <string name="runtime">Runtime:</string>
    <string name="imdb_votes_format">(%s votes)</string>
    <string name="country">Country:</string>
    <string name="genres">Genres:</string>
    <string name="title_activity_movie_details">MovieDetailsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="movie_poster">movie poster</string>
    <string name="writer">Writer:</string>
    <string name="director_writer_actor_icon">director, writer and actors icon</string>
    <string name="actors">Actors:</string>
    <string name="movie_plot_icon">movie plot icon</string>
    <string name="movie_awards_icon">movie awards icon</string>
    <string name="released">Released:</string>
    <string name="genre_image">genre image</string>
    <string name="movies_act_genre_image_transition_name">transition name for the image view in movies activity</string>
    <string name="server_error_msg">Something went wrong with the server!</string>
    <string name="client_error_msg">Something went wrong!</string>
    <string name="unknown_error_msg">Unknown error</string>
    <string name="retry">retry</string>
    <string name="no_internet_msg">no internet!</string>
    <string name="no_internet_icon">no internet icon</string>
    <string name="genre_colon">Genre: </string>
    <string name="movie_screenshots">movie screenshots</string>
    <string name="no_screenshots_available">no screenshots available for this movie</string>
    radle.bui
    <string name="year">Year:</string>
    <string name="movie_title_transition_name">movie title transition name</string>
    <string name="sort_by_imdb_rating">IMDB rating</string>
    <string name="sort_by_year_descending">new first</string>
    <string name="sort_by_year_ascending">old first</string>
    <string name="sort">Sort</string>

</resources>
