<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#222222">

            <TextView
                android:id="@+id/tv_movie_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:minLines="2"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium.White.Bold"
                app:layout_constraintEnd_toStartOf="@+id/iv_movie_poster"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="The Lord Of The Rings " />

            <ImageView
                android:id="@+id/iv_movie_poster"
                android:layout_width="100dp"
                android:layout_height="0dp"
                android:contentDescription="@string/movie_thumbnail"
                android:padding="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/svg_film_reel" />
            <!--            tools:src="@drawable/sample_poster"-->

            <TextView
                android:id="@+id/tv_release_year_static_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium.White"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@id/tv_genres_static_text"
                app:layout_constraintStart_toStartOf="@id/tv_movie_title" />

            <TextView
                android:id="@+id/tv_release_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium.White"
                app:layout_constraintBottom_toBottomOf="@id/tv_release_year_static_text"
                app:layout_constraintStart_toStartOf="@id/tv_imdb_rating"
                app:layout_constraintTop_toTopOf="@id/tv_release_year_static_text"
                tools:text="1997" />

            <ImageView
                android:id="@+id/iv_imdb_icon"
                android:layout_width="60dp"
                android:layout_height="25dp"
                android:contentDescription="@string/imdb_icon"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@id/tv_release_year_static_text"
                app:layout_constraintStart_toStartOf="@id/tv_movie_title"
                app:layout_constraintTop_toBottomOf="@id/tv_movie_title"
                app:srcCompat="@drawable/svg_imdb_with_border"
                tools:layout_editor_absoluteY="66dp" />

            <TextView
                android:id="@+id/tv_imdb_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium.White"
                app:layout_constraintBottom_toBottomOf="@+id/iv_imdb_icon"
                app:layout_constraintStart_toEndOf="@+id/iv_imdb_icon"
                app:layout_constraintTop_toTopOf="@+id/iv_imdb_icon"
                tools:text="8.9" />

            <TextView
                android:id="@+id/tv_genres_static_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/genres"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium.White"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_movie_title" />

            <TextView
                android:id="@+id/tv_genres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium.White"
                app:layout_constraintBottom_toBottomOf="@+id/tv_genres_static_text"
                app:layout_constraintEnd_toEndOf="@+id/tv_movie_title"
                app:layout_constraintStart_toStartOf="@+id/tv_imdb_rating"
                app:layout_constraintTop_toTopOf="@+id/tv_genres_static_text"
                tools:text="Crime, Sci-fi, Thriller" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</FrameLayout>
