<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#222222">

    <TextView
        android:id="@+id/tv_movie_title"
        android:transitionName="@string/movie_title_transition_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="sans-serif-light"
        android:paddingTop="24dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.White.Bold"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="The Lord Of The Rings  Or a Much Larger Title" />
    <!--    app:layout_constraintEnd_toStartOf="@+id/iv_movie_poster"-->

    <TextView
        android:id="@+id/tv_release_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.White.Bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_movie_title"
        tools:text="1997" />

    <ImageView
        android:id="@+id/iv_imdb_icon"
        android:layout_width="60dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/imdb_icon"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@id/tv_genres_static_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_release_year"
        app:srcCompat="@drawable/svg_imdb_with_border" />

    <TextView
        android:id="@+id/tv_imdb_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium.White"
        app:layout_constraintBottom_toBottomOf="@+id/iv_imdb_icon"
        app:layout_constraintStart_toEndOf="@+id/iv_imdb_icon"
        app:layout_constraintTop_toTopOf="@+id/iv_imdb_icon"
        tools:text="8.9" />

    <TextView
        android:id="@+id/tv_genres_static_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genres"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium.White"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/iv_imdb_icon"
        app:layout_constraintTop_toTopOf="@id/tv_genres" />

    <TextView
        android:id="@+id/tv_genres"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:scrollHorizontally="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium.White"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_imdb_rating"
        app:layout_constraintTop_toBottomOf="@+id/tv_imdb_votes"
        tools:text="Crime, Sci-fi, Thriller, Film-Noir, Romance, Comedy" />

    <TextView
        android:id="@+id/tv_imdb_votes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text=""
        android:textAppearance="@style/TextAppearance.AppCompat.Medium.White"
        app:layout_constraintBottom_toBottomOf="@+id/tv_imdb_rating"
        app:layout_constraintStart_toEndOf="@+id/tv_imdb_rating"
        app:layout_constraintTop_toTopOf="@+id/tv_imdb_rating"
        tools:text="(21,343 votes)" />

</androidx.constraintlayout.widget.ConstraintLayout>